--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": ">=5.6.0",
         "topthink/framework": "5.1.*",
         "phpoffice/phpexcel": "^1.8",
-        "phpoffice/phpspreadsheet": "^1.8"
+        "phpoffice/phpspreadsheet": "^1.8",
+        "overtrue/pinyin": "~3.0"
     },
     "autoload": {
         "psr-4": {
