--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "topthink/framework": "5.1.*",
         "phpoffice/phpspreadsheet": "^1.8",
         "overtrue/pinyin": "~3.0",
-        "phpmailer/phpmailer": "^6.1"
+        "phpmailer/phpmailer": "^6.1",
+        "topthink/think-migration": "v2.0.3"
     },
     "autoload": {
         "psr-4": {
