--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "phpoffice/phpspreadsheet": "^1.8",
         "overtrue/pinyin": "~3.0",
         "phpmailer/phpmailer": "^6.1",
-        "topthink/think-migration": "v2.0.3"
+        "topthink/think-migration": "v2.0.3",
+        "5ini99/think-auth": "^1.0"
     },
     "autoload": {
         "psr-4": {
