--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,5 +4,6 @@
 
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond $1 !^(static|upload)
   RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
 </IfModule>
