--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "phpmailer/phpmailer": "^6.1",
         "topthink/think-migration": "v2.0.3",
         "5ini99/think-auth": "^1.0",
-        "topthink/think-image": "^1.0"
+        "topthink/think-image": "^1.0",
+        "endroid/qrcode": "^3.7"
     },
     "autoload": {
         "psr-4": {
