--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,10 @@
     ],
     "homepage": "http://thinkphp.cn/",
     "license": "Apache-2.0",
-    "authors": [
-        {
-            "name": "liu21st",
-            "email": "liu21st@gmail.com"
-        }
-    ],
+    "authors": [{
+        "name": "liu21st",
+        "email": "liu21st@gmail.com"
+    }],
     "require": {
         "php": ">=5.6.0",
         "topthink/framework": "5.1.*",
